--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,9 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
+aioprometheus = ">= 22.5.0, < 23.0.0"
 python = ">= 3.8, < 4.0"
 gcloud-aio-auth = ">= 3.3.0, < 6.0.0"
-prometheus-client = ">= 0.13.1, < 1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 aiohttp = "3.9.1"
