--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 aioprometheus = ">= 22.5.0, < 23.0.0"
 python = ">= 3.8, < 4.0"
 gcloud-aio-auth = ">= 3.3.0, < 6.0.0"
+typing-extensions = {version = ">= 4.12.2", python = "< 3.11"}
 
 [tool.poetry.group.dev.dependencies]
 aiohttp = "3.9.1"
